--- a/.github/actions/expo-build/action.yml
+++ b/.github/actions/expo-build/action.yml
@@ -81,19 +81,16 @@ runs:
         project_ids=()
 
         extract_array_json() {
-          # Try to capture the last JSON array block [...] from noisy output
           local raw="$1"
           local arr
           arr=$(printf '%s' "$raw" | perl -0777 -ne 'print $1 if /(\[[\s\S]*\])\s*$/s') || true
           if [ -z "${arr:-}" ]; then
-            # Fallback: naive sed from first '[' to last ']'
             arr=$(printf '%s' "$raw" | sed ':a;N;$!ba;s/.*\(\[[^]]*\]\).*/\1/') || true
           fi
           printf '%s' "${arr:-}"
         }
 
         normalize_array_json() {
-          # Accept either an array or a stringified array and return a real array
           local candidate="$1"
           echo "$candidate" | jq empty >/dev/null 2>&1 || {
             echo "Error: Invalid JSON candidate:"
@@ -106,22 +103,19 @@ runs:
         for platform in "${platforms[@]}"; do
           echo "=== Checking builds for platform: $platform ==="
 
-          # 1) Ask for existing builds
           build_output=$(yarn nx run ${{ inputs.project }}:build-list \
             --platform "$platform" \
             --buildProfile "${{ inputs.profile }}" \
-            --runtimeVersion "${{ inputs["runtime-version"] }}" \
+            --runtimeVersion "${{ inputs.runtime-version }}" \
             --limit 1 \
             --json \
             --interactive false 2>&1) || true
 
           candidate=$(extract_array_json "$build_output")
           if [ -z "$candidate" ]; then
-            # As a fallback, try to treat the whole output as JSON (some CLIs return pure JSON)
             candidate="$build_output"
           fi
 
-          # Validate + normalize array (handles double-encoded JSON)
           if ! echo "$candidate" | jq empty >/dev/null 2>&1; then
             echo "Error: Received invalid JSON from build-list for $platform"
             echo "Raw (visible):"; echo "$build_output" | cat -v
@@ -130,9 +124,8 @@ runs:
           fi
           normalized=$(normalize_array_json "$candidate")
 
-          # 2) If no builds, start a new one
           if [[ "$(echo "$normalized" | jq 'length')" -eq 0 ]]; then
-            echo "No existing $platform build found for runtime version ${{ inputs["runtime-version"] }}. Starting a new build."
+            echo "No existing $platform build found for runtime version ${{ inputs.runtime-version }}. Starting a new build."
             build_output=$(yarn nx run ${{ inputs.project }}:build \
               --profile "${{ inputs.profile }}" \
               --platform "$platform" \
@@ -154,10 +147,9 @@ runs:
             }
             normalized=$(normalize_array_json "$candidate")
           else
-            echo "$platform build found for runtime version ${{ inputs["runtime-version"] }}."
+            echo "$platform build found for runtime version ${{ inputs.runtime-version }}."
           fi
 
-          # 3) Ensure first element is an object
           first_type=$(echo "$normalized" | jq -r '.[0] | type? // "null"')
           if [[ "$first_type" != "object" ]]; then
             echo "Error: Expected array of objects; got array of '$first_type' for $platform"
@@ -165,7 +157,6 @@ runs:
             exit 1
           fi
 
-          # 4) Extract fields
           slug=$(echo "$normalized" | jq -r '.[0].project.slug')
           project_id=$(echo "$normalized" | jq -r '.[0].project.id')
           build_id=$(echo "$normalized" | jq -r '.[0].id')
@@ -175,10 +166,8 @@ runs:
           app_version=$(echo "$normalized" | jq -r '.[0].appVersion')
           git_commit=$(echo "$normalized" | jq -r '.[0].gitCommitHash')
 
-          # Link (adjust account if needed)
           build_link="https://expo.dev/accounts/better-angels/projects/${slug}/builds/${build_id}"
 
-          # 5) Emit per-platform outputs
           {
             echo "${platform}-build-id=${build_id}"
             echo "${platform}-build-link=${build_link}"
@@ -189,12 +178,10 @@ runs:
             echo "${platform}-git-commit=${git_commit}"
           } >> "$GITHUB_OUTPUT"
 
-          # Track for cross-platform consistency
           slugs+=("$slug")
           project_ids+=("$project_id")
         done
 
-        # 6) Ensure slugs & project IDs consistent across platforms
         unique_slugs=($(printf '%s\n' "${slugs[@]}" | sort -u))
         unique_project_ids=($(printf '%s\n' "${project_ids[@]}" | sort -u))
 
@@ -207,7 +194,6 @@ runs:
           exit 1
         fi
 
-        # 7) Common outputs
         commit_message=$(git log -1 --pretty=format:"%s" HEAD || echo "")
         {
           echo "commit-message=${commit_message}"
